--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         }
     }
    
-    document.addEventListener('touchmove', function(e) {
+    document.getElementById('timelineDiv').addEventListener('touchmove', function(e) {
         var te = e.changedTouches[0].clientY;
         e.preventDefault()
     },{passive:false});
