Mobile View Fix

--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
                 <h4 class="text-white">
                     At the moment I am polishing my skills and learning new-ones some of them are listed below:
                 </h4>
-                <img src="./images/AutoCad.png" class="img-fluid img-border bg-elevated p-3 m-3">
-                <img src="./images/blender.png" class="img-fluid img-border bg-elevated p-3 m-3">
+                <div class="img-border bg-elevated p-3 mb-3 mt-3">
+                    <img src="./images/AutoCad.png" class="img-fluid ">
+                </div>
+                <div class="img-border bg-elevated p-3">
+                    <img src="./images/blender.png" class="img-fluid">
+                </div>
             </div>
         </div>
         <div class="row bg-elevated mt-3 text-white text-center">
