--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 id:"jlo"
             },
             {
-                heading:"The Learning Phase Continues",
+                heading:"Trying Something Else",
                 story:"After somewhat perfecting female faces, I shifted towards male ones and conceptulized the handsome <span class='text-bhavik'>Tyler Hoechlin</span>",
                 body:"tylerHoechlin.jpeg",
                 id:"tylerHoechlin"
